--- a/css/auth.css
+++ b/css/auth.css
@@ -2,16 +2,6 @@ main {
 	width: 100%;
 	height: 110vh !important;
 }
-
-/* p {
-	width: 250px;
-	text-align: center;
-	justify-content: center;
-	display: flex;
-	margin: 0 auto;
-	color: white !important;
-} */
-
 input {
 	margin: 2px auto 30px auto;
 	display: block;
@@ -27,15 +17,15 @@ input {
 	background-size: 20px;
 }
 
-
 .inp-img {
 	width: 10px;
 	position: relative
 }
-label
-{
+
+label {
 	margin-bottom: 20px;
 }
+
 .title {
 	text-align: center;
 	color: #5f5f5f;
@@ -43,9 +33,8 @@ label
 	text-transform: uppercase;
 	margin: 20px;
 	letter-spacing: 1px;
-    font-size: 28px;
+	font-size: 28px;
 }
-
 
 .auth-content-container {
 	display: block;
@@ -80,7 +69,6 @@ button {
 	border-radius: unset;
 	height: unset;
 	color: unset;
-
 	color: white !important;
 	font-size: 15px;
 }
