--- a/css/excercies.css
+++ b/css/excercies.css
@@ -1,4 +1,3 @@
-
 table {
 	margin: 0 auto;
 	cursor: text;
@@ -72,7 +71,7 @@ span p {
 	left: 50%;
 	transform: translate(-50%, -57%);
 	width: 470px;
-top: 50vh;
+	top: 50vh;
 	min-height: 520px;
 	height: auto;
 	display: block;
@@ -102,8 +101,8 @@ top: 50vh;
 .iksz:hover {
 	opacity: 1;
 }
-.eksz
-{
+
+.eksz {
 	font-size: 35px;
 	position: fixed;
 	top: 55px;
@@ -143,8 +142,6 @@ top: 50vh;
 	border: 2px solid var(--cyan);
 }
 
-
-
 .exc-title {
 	font-size: 1rem;
 	color: var(--secondary);
@@ -169,7 +166,6 @@ top: 50vh;
 	position: relative;
 	display: flex;
 	justify-content: space-between;
-	
 }
 
 .cat-card:first-child {
@@ -191,10 +187,8 @@ top: 50vh;
 }
 
 .cat-card:hover {
-opacity: .9;
+	opacity: .9;
 }
-
-
 
 .wrong-answer {
 	border: 1px solid var(--danger);
